Write Use authorization plugin, centralized logs, registry v2

--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -196,3 +196,50 @@ note={\url{https://jpetazzo.github.io/assets/2015-03-03-not-so-deep-dive-into-do
 year={2016},
 month={mai}
 }
+
+@misc{docker_doc_daemon,
+title={{The daemon command description and usage}},
+author={{Docker Inc.}},
+note={\url{https://docs.docker.com/engine/reference/commandline/daemon/}},
+year={2016},
+month={mai}
+}
+
+@misc{docker_doc_remote_api,
+title={{API Documentation for Docker}},
+author={{Docker Inc.}},
+note={\url{https://docs.docker.com/engine/reference/api/docker_remote_api/}},
+year={2016},
+month={mai}
+}
+
+@misc{developpez_syslog,
+title={{Présentation du protocole Syslog}},
+author={{ram-0000}},
+note={\url{http://ram-0000.developpez.com/tutoriels/reseau/Syslog/}},
+year={2016},
+month={mai}
+}
+
+@misc{wiki_syslog,
+title={{Syslog}},
+note={\url{https://fr.wikipedia.org/wiki/Syslog}},
+year={2016},
+month={mai}
+}
+
+@misc{brandpending_syslog,
+title={{Shipping logs to rsyslog from a Docker container using the syslog Logging Driver}},
+author={{Brand Pending}},
+note={\url{http://www.brandpending.com/blog/2015/11/9/shipping-logs-to-rsyslog-from-a-docker-container-using-the-syslog-logging-driver}},
+year={2016},
+month={mai}
+}
+
+@misc{blog_docker_registry_v2,
+title={{Faster and Better Image Distribution with Registry 2.0 and Engine 1.6}},
+author={{Ben Firshman}},
+note={\url{https://blog.docker.com/2015/04/faster-and-better-image-distribution-with-registry-2-0-and-engine-1-6/}},
+year={2016},
+month={mai}
+}
