--- a/rapports/etat_de_l_art_mi_projet/etat_de_l_art_mi_projet.tex
+++ b/rapports/etat_de_l_art_mi_projet/etat_de_l_art_mi_projet.tex
@@ -194,9 +194,9 @@ Grossièrement, Buildroot permet d'ajouter des packages et de configurer son sys
 
 \section{Vérifier que le système peut faire tourner Docker}
 
-Il faut en premier lieu mettre la main sur un binaire ARM Docker statiquement lié qui intègre le \emph{daemon}. En effet, à l'heure actuelle, lorsqu'on compile Docker pour ARM de la manière officielle, le binaire résultant n'intègre pas le \emph{daemon} mais uniquement le client (qui permet de se connecter à un \emph{daemon} externe). Voir également à la section \ref{maniere_officielle_limitations}
+Il faut en premier lieu mettre la main sur un binaire ARM Docker statiquement lié qui intègre le \emph{daemon}. En effet, à l'heure actuelle, lorsqu'on compile Docker pour ARM de la manière officielle, le binaire résultant n'intègre pas le \emph{daemon} mais uniquement le client (qui permet de se connecter à un \emph{daemon} distant). Voir également à la section \ref{maniere_officielle_limitations}
 
-Le seul binaire de ce type que j'ai trouvé actuellement est téléchargeable ici: \url{https://github.com/umiddelb/armhf/raw/master/bin/docker-1.9.1}\label{binaire_arm}.
+Le seul binaire de ce type trouvé actuellement est téléchargeable ici: \url{https://github.com/umiddelb/armhf/raw/master/bin/docker-1.9.1}\label{binaire_arm}.
 
 Copiez ce fichier sur la cible et tentez de le lancer avec:
 
@@ -367,14 +367,14 @@ Cette technique (et les suivantes basées sur celle-ci) est différente. Ici, on
 
 \subsection{Cheminement général}
 
-Il faut d'abord installer QEMU sur une machine. J'utilise Archlinux mais cela devrait être sensiblement la même chose pour d'autres distributions.
+Il faut d'abord installer QEMU sur une machine. Ici Archlinux est utilisé mais cela devrait être sensiblement la même chose pour d'autres distributions.
 
 \label{install_qemu_arch}
 \begin{bashcode}
 pacman -S qemu qemu-arch-extra
 \end{bashcode}
 
-Pour la suite, j'ai suivi les tutoriels suivants: 
+Pour la suite, les tutoriels suivantes ont été suivis : 
 \begin{enumerate}
 \item A QEMU image for debian armel, \url{http://www.n0nb.us/blog/2012/03/a-qemu-image-for-debian-armel/}.
 \item Debian Wheezy armhf images for QEMU, \url{https://people.debian.org/~aurel32/qemu/armhf/}
@@ -384,7 +384,7 @@ On ne va pas s'étendre sur cette solution, car Debian ARM ne propose pas de pac
 
 \subsection{Schéma}
 
-Comme on peut le voir à la figure \ref{fig_docker_qemu}, on reprend le même principe qu'expliqué à la section: \nameref{maniere_officielle}.
+Comme on peut le voir à la figure \ref{fig_docker_qemu}, on reprend le même principe expliqué à la section: \nameref{maniere_officielle}.
 
 \begin{figure}[H]
     \begin{center}
@@ -398,7 +398,7 @@ La principale différence vient du fait qu'on encapsule le processus dans une ma
 
 \subsection{Limitations}
 
-Cette solution n'est pas une solution à suivre. C'est, à mon avis, une bonne idée mais inutilisable comme présenté ici. Par contre, cela peut devenir intéressant avec d'autres distributions qui intègre un package Docker et dont le kernel est correctement configuré. Par exemple, Raspbian (Une Debian modifiée pour les Raspberry Pi) ou Archlinux ARM. Les solutions suivantes reprennent cette hypothèse\label{hypothese_debian}.
+Cette solution n'est pas une solution à suivre. C'est, à mon avis, une bonne idée mais inutilisable comme présenté ici. Par contre, cela peut devenir intéressant avec d'autres distributions qui intègrent un package Docker et dont le kernel est correctement configuré. Par exemple, Raspbian (Une Debian modifiée pour les Raspberry Pi) ou Archlinux ARM. Les solutions suivantes reprennent cette hypothèse\label{hypothese_debian}.
 
 
 Autre point négatif, cette solution (et les dérivées utilisant QEMU) nécessite de disposer d'un binaire ARM Docker, celui de la section \ref{binaire_arm}. Par conséquent, comme on ne sait pas comment produire ce binaire, on ne maîtrise pas l'ensemble de la pipeline de compilation.
@@ -470,13 +470,13 @@ En clair, tous les dossiers en dessus de \textit{archlinux\_rpi2} appartiennent 
 
 \subsection{Limitations}
 
-Bien que je sois parvenu à booter sur la machine virtuelle, je n'ai pas pu lancer la compilation de Docker car cette procédure à "détecté" que je me trouvais en \code{chroot} et s'est arrêtée.
+Bien qu'il ait été possible de booter sur la machine virtuelle, la compilation de Docker n'a pas pu être lancée car cette procédure à "détecté" qu'on se trouvait en \code{chroot} et s'est arrêtée.
 
 \section{Compiler Docker sans Docker}
 
 Avec cette technique, on essaie de court-circuiter la compilation officielle (Docker in Docker) en compilant Docker sans Docker. Pour ce faire, il faut veiller à avoir une machine qui puisse compiler Go, car Docker est écrit dans ce langage.
 
-\textbf{Attention}: J'ai d'abord essayé de compiler Docker pour une machine x64. Cette technique était avant tout exploratoire et ne permet donc pas de compiler un binaire ARM.
+\textbf{Attention}: Il a d'abord été tenté de compiler Docker pour une machine x64. Cette technique était avant tout exploratoire et ne permet donc pas de compiler un binaire ARM.
 
 \subsection{Principe utilisé}
 
@@ -525,7 +525,7 @@ Cette technique n'est pas une bonne idée pour les raisons suivantes:
 
 \begin{itemize}
 \item Il faut installer et configurer soi-même les outils de compilations alors qu'avec la manière officielle, c'est automatiquement fait dans un container.
-\item Lors de mes tests, je n'ai pas essayé de cross compiler vers ARM. C'est possible mais je ne l'ai pas testé.
+\item Lors des tests, il n'a été tenté de cross compiler vers ARM. C'est possible mais cela n'a été pas testé.
 \item Cette solution n'apporte rien de plus par rapport à la manière officielle. C'est-à-dire qu'elle produit (ou produirait dans le cas d'une cross compilation ARM) le même binaire qu'avec la manière officielle. Donc, le \textit{deamon} ne serait de toute façon pas disponible.
 
 \end{itemize}
